--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://erfan-goodarzi.github.io/Box-shadow-tool",
+    "homepage": "http://erfan-goodarzi.github.io/box-shadow-tool",
     "name": "box-shadow-tool",
     "version": "0.1.0",
     "private": true,
